# the-liberal-arts-education

./: README.md  cards.toml  rule.md
card_generator/: Cargo.toml
card_generator/src/: card.rs  color.rs  file_io.rs  main.rs  raw_card.rs
