[package]
name = "card_generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"

toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }

# num = "0.4.0"
